--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,39 @@
+@import "https://unpkg.com/open-props";
+@import "https://unpkg.com/open-props/normalize.min.css";
+
+
 body{
 	margin: 0px;
-	background-color: rgb(12, 12, 12);
+	background-color: rgb(29, 29, 29);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.main-img{
-	width: 100%;
+body::after {
+	position: absolute;
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	z-index: -2;
+	content: url(../img/dmitry-popovichev-day-screenshot.jpg);
 }
 
-.container {
+.hder-img-container {
 	height: 600px;
 	position: relative;
 	text-align: center;
+	justify-content: center;
+
+
 	color: rgb(231, 231, 231);
+	background-image: url(../img/Header\ Image.jpg);
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
 	z-index: -1;
 }
 
-.centered {
+.welcome-txt {
 	position: absolute;
 	top: -10%;
 	left: 50%;
@@ -27,30 +45,38 @@ body{
 }
 
 .main-hder {
-	width: 80%;
+	width: 100%;
 	height: 10%;
-	background-color: rgba(26, 182, 209, 0.5);
-	margin: auto;
-	margin-top: 20px;
-	border-radius: 13px;
 	align-content: normal;
 	align-items: center;
 
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	justify-content: space-evenly;
 	z-index: 999;
 }
 
-.main-hder > nav {
+.navigation {
+	height: 100%;
+	width: 50%;
+	align-content: normal;
+	align-items: center;
+	left: 900px;
+
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	z-index: 999;
+}
+
+.main-hder > div > nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 10%;
-  height: 70%;
+  width: 25%;
+  height: 80%;
   border-radius: 13px;
-  background-color: rgba(8, 8, 8, 0.8);
-  margin: auto;
+  background-color: rgb(8, 8, 8);
 }
 
 nav p {
@@ -62,63 +88,8 @@ nav p {
 p {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 20px;
-	color: white;
+	color: rgb(255, 255, 255);
 	letter-spacing: 2px;
 	word-spacing: 4px;
-	
-}
-
-.intro-container {
-	width: 50%;
-  	height: 2000px;
-  	background-color: rgba(26, 182, 209, 0.5);
-  	padding: 0;
-  	margin: 100px auto 0 auto;
-  	
-  	align-items: center;
-  	justify-content: center;
-}
-
-.intro-img {
-	width: 800px;
-	height: 450px;
-	margin: auto;
-	margin-top: 40px;
-	padding-top: 100px;
-
-	background-image: url("../img/dmitry-popovichev-night-screenshot.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-
-/*.intro-img:hover {
-	width: 90%;
-	height: 450px;
-	margin: auto;
-	margin-top: 10px;
-
-	background-image: url("../img/dmitry-popovichev-day-screenshot.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-}*/
-
-
-
-.intro-text-container {
-	width: 80%;
-	height: 750px;
-	background-color: rgba(26, 182, 209, 0.5);
-	padding-top: 50px;
-	align-self: center;
-}
-
-.temp-spacer {
-	width: 80%;
-	height: 200px;
-	margin: 50px;
-	background-color: rgba(26, 182, 209, 0.5);
 }
 
