--- a/css/main.css
+++ b/css/main.css
@@ -93,3 +93,129 @@ p {
 	word-spacing: 4px;
 }
 
+li {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 20px;
+	color: rgb(255, 255, 255);
+	letter-spacing: 2px;
+	word-spacing: 4px;
+}
+
+.spacer {
+	height: 30px;
+}
+
+.footer {
+	width: 100%;
+	height: 400px;
+	background-color: rgb(5, 5, 5);
+}
+.social-container {
+	--iconspacer: 5%;
+	width: 80%;
+	height: 50%;
+	position: relative;
+	
+	left: 50%;
+	transform: translate(-50%, 50%);
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 100px;
+}
+
+.linkedin-icon {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Linkin\ B&W.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.linkedin-icon:hover {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Linkin.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.artstation-icon {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Artstation\ Logo\ B&W.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.artstation-icon:hover {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Artstation\ Logo.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.facebook-icon {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Facebook\ \(SQ\)\ B&W.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.facebook-icon:hover {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Facebook\ \(SQ\).png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.twitter-icon {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Twitter\ logo\ B&W.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.twitter-icon:hover {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Twitter\ logo.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.instagram-icon {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/insta\ B&W.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.instagram-icon:hover {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/insta.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
