--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body::after {
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	z-index: -1;
+
 }
 
 .welcome-txt {
@@ -67,6 +68,7 @@ body::after {
 	flex-wrap: nowrap;
 	justify-content: space-evenly;
 	z-index: 999;
+
 }
 
 .main-hder > div > nav {
@@ -93,12 +95,32 @@ p {
 	word-spacing: 4px;
 }
 
+.datetime {
+	width: 900px;
+	padding: 16px;
+	background: #444444;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+	border-radius: 4px;
+	border-left: 10px #ddda10 solid;
+	float: right;
+}
+
+.date {
+	font-size: 14px;
+	color: white;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 li {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 20px;
 	color: rgb(255, 255, 255);
 	letter-spacing: 2px;
 	word-spacing: 4px;
+}
+
+a {
+	cursor: pointer;
 }
 
 .spacer {
@@ -110,6 +132,9 @@ li {
 	height: 400px;
 	background-color: rgb(5, 5, 5);
 }
+
+/*Social Media Icons*/
+
 .social-container {
 	--iconspacer: 5%;
 	width: 80%;
