--- a/css/hobby-page.css
+++ b/css/hobby-page.css
@@ -21,7 +21,7 @@
 .body-title {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 45px;
-	color: white;
+	color: rgb(0, 0, 0);
 	letter-spacing: 2px;
 	word-spacing: 4px;
 	padding: 20px;
