--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,6 @@
 @import "https://unpkg.com/open-props";
 @import "https://unpkg.com/open-props/normalize.min.css";
 
-
-body{
-	margin: 0px;
-	background-color: rgb(29, 29, 29);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
 body::after {
 	position: absolute;
 	width: 0;
@@ -19,80 +10,91 @@ body::after {
 	content: url(../img/dmitry-popovichev-day-screenshot.jpg);
 }
 
-.hder-img-container {
-	height: 600px;
-	position: relative;
-	text-align: center;
-	justify-content: center;
+.header-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    padding: 40px;
+    background-color: #101010;
+    resize: vertical;
+    overflow: auto;
+}
+
+.inner-header {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.logo-container {
+    height: 100%;
+    display: table;
+    float: left;
+    padding: 0px 150px;
+}
 
 
-	color: rgb(231, 231, 231);
-	background-image: url(../img/Header\ Image.jpg);
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	z-index: -1;
+.navigation {    
+    float: right;
+    height: 30%;
 
 }
 
-.welcome-txt {
-	position: absolute;
-	top: -10%;
-	left: 50%;
-	transform: translate(-50%, 50%);
-	font-size: 120px;
+.navigation a {
+    height: 100%;
+    display: table;
+    float: left;
+    padding: 10px 30px;
+}
+
+.navigation a:last-child {
+    padding-right: 0;
+}
+
+.navigation a li {
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+}
+
+p {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	white-space: nowrap;
-	-webkit-text-stroke: 2px rgb(19, 19, 19);
+	font-size: 20px;
+	color: rgb(0, 0, 0);
+	letter-spacing: 2px;
+	word-spacing: 4px;
 }
 
-.main-hder {
-	width: 100%;
-	height: 10%;
-	align-content: normal;
-	align-items: center;
-
-	display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-evenly;
-	z-index: 999;
+.datetime {
+	width: 900px;
+	padding: 16px;
+	background: #444444;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+	border-radius: 4px;
+	border-left: 10px #ddda10 solid;
+	float: right;
 }
 
-.navigation {
-	height: 100%;
-	width: 50%;
-	align-content: normal;
-	align-items: center;
-	left: 900px;
-
-	display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-evenly;
-	z-index: 999;
-
+.date {
+	font-size: 14px;
+	color: white;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.main-hder > div > nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 25%;
-  height: 80%;
-  border-radius: 13px;
-  background-color: rgb(8, 8, 8);
+a {
+	cursor: pointer;
 }
 
 nav p {
 	color: rgb(218, 198, 18);
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 120%;
-}
-
-p {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 20px;
-	color: rgb(255, 255, 255);
-	letter-spacing: 2px;
-	word-spacing: 4px;
 }
 
 .datetime {
@@ -114,13 +116,9 @@ p {
 li {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 20px;
-	color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
 	letter-spacing: 2px;
 	word-spacing: 4px;
-}
-
-a {
-	cursor: pointer;
 }
 
 .spacer {
@@ -159,6 +157,7 @@ a {
 	background-repeat: no-repeat;
 	background-position: center;
 }
+
 .linkedin-icon:hover {
 	width: var(--iconspacer);
 	aspect-ratio: 1/1;
@@ -239,6 +238,26 @@ a {
 	width: var(--iconspacer);
 	aspect-ratio: 1/1;
 	background-image: url("../img/insta.png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.github-icon {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Github\(Grey\).png");
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.github-icon:hover {
+	width: var(--iconspacer);
+	aspect-ratio: 1/1;
+	background-image: url("../img/Github\(Blue\).png");
 
 	background-size: cover;
 	background-repeat: no-repeat;
